# whale_contract

./: README.md  angular.json  karma.conf.js  package-lock.json  package.json
program/: Anchor.toml
program/programs/program/: Cargo.toml
sol_program/: Anchor.toml
sol_program/programs/sol_program/: Cargo.toml
sol_program/programs/sol_program/src/: lib.rs
sol_program/tests/: sol_program.ts
src/: index.html
src/app/: app.component.html  app.component.spec.ts  app.component.ts
src/app/schemas/: plat-info-account.ts
