[package]
name = "sol_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
mpl-token-metadata = {version = "1.2.4", features = ["no-entrypoint"]}
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.8.14"
